--- a/content.html
+++ b/content.html
@@ -16,8 +16,8 @@
    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Jost&family=Poiret+One&display=swap"
       rel="stylesheet">
 
-   <link rel="stylesheet" href="/interno/style.css">
-   <link rel="stylesheet" href="/interno/media.css">
+   <link rel="stylesheet" href="/interno/css/style.css">
+   <link rel="stylesheet" href="/interno/css/media.css">
 
    <title>Interno Content</title>
 </head>
@@ -34,7 +34,7 @@
          </div>
          <div class="header_menu">
             <nav class="navigation">
-               <a class="nav__link" href="#">Home</a>
+               <a class="nav__link" href='javascript:document.location.href = "/interno/index.html";'>Home</a>
                <a class="nav__link" href="#">About Us</a>
                <a class="nav__link" href="#">Services</a>
                <a class="nav__link" href="#">Pages</a>
@@ -47,6 +47,7 @@
    <div class="background">
       <img class="img_cover_content" src="/interno/img/background_content.jpg" height="100%" width=100%>
    </div>
+
    <!--FOOT-->
 
    <footer class="footer">
@@ -88,7 +89,7 @@
       </div>
    </footer>
    </container>
-   <script src="/interno/script_interno.js"></script>
+   <script src="/interno/js/script_interno.js"></script>
 </body>
 
 </html>
