--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
          </div>
          <div class="header_menu">
             <nav class="navigation">
-               <a class="nav__link" href="#">Home</a>
+               <a class="nav__link" href='javascript:document.location.href = "/interno/index.html";'>Home</a>
                <a class="nav__link" href="#">About Us</a>
                <a class="nav__link" href="#">Services</a>
                <a class="nav__link" href="#">Pages</a>
-               <a class="nav__link" href="#">Contact Us</a>
+               <a class="nav__link" href="#nav_contacts">Contact Us</a>
             </nav>
          </div>
       </div>
@@ -79,7 +79,7 @@
          <h1 class="interior_design title_section_two">Interior Design</h1>
          <p class="text_section_two">Enhancing the interior to achieve a healthier environment for the people using
             right space.</p>
-         <button class="button_view" type="button">
+         <button class="button_view button_view_one" type="button">
             <p class="button">View More</p>
          </button>
       </div>
@@ -87,7 +87,7 @@
          <h1 class="interior_design title_section_two">Furniture</h1>
          <p class="text_section_two">Movable articles that are used to make a room or building suitable for living or
             working.</p>
-         <button class="button_view" type="button">
+         <button class="button_view button_view_two" type="button">
             <p class="button">View More</p>
          </button>
       </div>
@@ -95,7 +95,7 @@
          <h1 class="interior_design title_section_two">Flooring</h1>
          <p class="text_section_two">Thin object any finished material applied over a floor structure to provide a
             walking surface.</p>
-         <button class="button_view" type="button">
+         <button class="button_view button_view_three" type="button">
             <p class="button">View More</p>
          </button>
       </div>
@@ -125,8 +125,9 @@
                </div>
 
                <button class="button_get_free_estimate" type="button">
-                  <p class="button_estimate">Get Free Estimate</p>
+                  <a class="button_number_phone" href="tel:01234678">Get Free Estimate</a>
                </button>
+
             </div>
          </div>
          <div class="background_img_sec_three">
@@ -414,7 +415,7 @@
             <p class="foot_text">Our Projects</p>
             <p class="foot_text">Contact Us</p>
          </div>
-         <div class="footer_contact">
+         <div class="footer_contact" id="nav_contacts">
             <h1 class="foot_title">Contact</h1>
             <p class="foot_text">53, East Birchwood Ave. Brooklyn, New York 11201, USA.</p>
             <p class="foot_text">contact@interno.com</p>
