button s1, logo, content

--- a/content.html
+++ b/content.html
@@ -19,7 +19,10 @@
    <link rel="stylesheet" href="/interno/css/style.css">
    <link rel="stylesheet" href="/interno/css/media.css">
 
-   <title>Interno Content</title>
+   <script src="https://kit.fontawesome.com/726c072803.js" crossorigin="anonymous"></script>
+   <link rel="icon" href="/interno/img/favicon_interno.png">
+
+   <title>Content</title>
 </head>
 
 <body class="body">
@@ -43,9 +46,15 @@
          </div>
       </div>
    </header>
+   <h1 class="title_content">Content</h1>
 
-   <div class="background">
-      <img class="img_cover_content" src="/interno/img/background_content.jpg" height="100%" width=100%>
+   <div class="content_content">
+      <img class="img_content_content" src="/interno/img/content_one.png">
+      <img class="img_content_content" src="/interno/img/content_two.png">
+      <img class="img_content_content" src="/interno/img/content_three.png">
+      <img class="img_content_content" src="/interno/img/content_four.png">
+      <img class="img_content_content" src="/interno/img/content_five.png">
+      <img class="img_content_content" src="/interno/img/content_six.png">
    </div>
 
    <!--FOOT-->
@@ -58,10 +67,14 @@
          </div>
          <p class="foot_about">We are the leading architect and interior design firm in the world.</p>
          <div class="foot_icons">
-            <i class="fa-brands fa-facebook-f foot_icon"></i>
-            <i class="fa-brands fa-twitter foot_icon"></i>
-            <i class="fa-brands fa-linkedin-in foot_icon"></i>
-            <i class="fa-brands fa-instagram foot_icon"></i>
+            <a class="social_item" href="https://www.facebook.com/" target="_blank">
+               <i class="fa-brands fa-facebook-f foot_icon"></i></a>
+            <a class="social_item" href="https://www.twitter.com/" target="_blank">
+               <i class="fa-brands fa-twitter foot_icon"></i></a>
+            <a class="social_item" href="https://www.linkedin.com/" target="_blank">
+               <i class="fa-brands fa-linkedin-in foot_icon"></i></a>
+            <a class="social_item" href="https://www.instagram.com/" target="_blank">
+               <i class="fa-brands fa-instagram foot_icon"></i></a>
          </div>
       </div>
       <div class="footer_pages">
