--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
    <link rel="stylesheet" href="/interno/css/style.css">
    <link rel="stylesheet" href="/interno/css/media.css">
 
@@ -19,6 +20,7 @@
       rel="stylesheet">
 
    <script src="https://kit.fontawesome.com/726c072803.js" crossorigin="anonymous"></script>
+   <link rel="icon" href="/interno/img/favicon_interno.png">
    <title>Interno</title>
 </head>
 
@@ -59,10 +61,12 @@
             <p class="text_content">The world needs innovators and problem solvers who turn</p>
             <p class="text">challenges into greater opportunities.</p>
          </div>
-         <button class="button_create" type="button">
-            <p class="button_name">Get Started</p>
-         </button>
 
+         <div class="button_location">
+            <button class="button_create" type="button">
+               <p class="button_name">Get Started</p>
+            </button>
+         </div>
 
       </div>
       <div class="background_section_one">
@@ -393,10 +397,14 @@
             </div>
             <p class="foot_about">We are the leading architect and interior design firm in the world.</p>
             <div class="foot_icons">
-               <i class="fa-brands fa-facebook-f foot_icon"></i>
-               <i class="fa-brands fa-twitter foot_icon"></i>
-               <i class="fa-brands fa-linkedin-in foot_icon"></i>
-               <i class="fa-brands fa-instagram foot_icon"></i>
+               <a class="social_item" href="https://www.facebook.com/" target="_blank">
+                  <i class="fa-brands fa-facebook-f foot_icon"></i></a>
+               <a class="social_item" href="https://www.twitter.com/" target="_blank">
+                  <i class="fa-brands fa-twitter foot_icon"></i></a>
+               <a class="social_item" href="https://www.linkedin.com/" target="_blank">
+                  <i class="fa-brands fa-linkedin-in foot_icon"></i></a>
+               <a class="social_item" href="https://www.instagram.com/" target="_blank">
+                  <i class="fa-brands fa-instagram foot_icon"></i></a>
             </div>
          </div>
          <div class="footer_pages">
