--- a/index.html
+++ b/index.html
@@ -378,13 +378,27 @@
             <p class="info_sec_nine">Contact Us & Get a Free Consultation</p>
 
             <button class="button_sec_nine" type="button">
-               <p class="name_button_sec_nine">Connect With us</p>
+               <p class="name_button_sec_nine">Connect with Us</p>
                <div class="button_elem">
                   <div class="element_arrow"></div>
                </div>
             </button>
-
          </div>
+
+         <div class="popup_bg"></div>
+         <div class="popup">
+            <p class="content_popup">Connect with Us</p>
+            <div class="popup_close"></div>
+
+            <form class="popup_form">
+               <input class="popup_input" type="tel" name="popup-form" placeholder="Phone number">
+               <input class="popup_input" type="email" name="popup-form" placeholder="Email">
+               <button class="popup_button" type="button">
+                  <p class="popup_button_name">Confirm</p>
+               </button>
+            </form>
+         </div>
+
       </section>
 
       <!--FOOT-->
